--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="logo-wrapper navbar-brand valign">
                 <div class="logo">
                     <a href="index.html">
-                        <h2>Fabiola &amp; Hugo</h2>
+                        <img src="images3/logo2.png" alt="" style="width: 43%;">
                     </a>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="flexslider js-fullheight">
                 <ul class="slides">
                     <li class="bg-fixed"
-                        style="background-image: url(images3/foto_portada.jpg); background-position: 50%;"
+                        style="background-image: url(images3/cambio_portado.jpg); background-position: 50%;"
                         data-overlay-dark="2" id="icon">
                         <div class="overlay"></div>
                         <div class="container">
@@ -122,9 +122,14 @@
             </div>
         </div>
     </div>
-    <!-- Bride & Groom section -->
+    <!-- Bride & Groom section 
+     
+    background-color: #faf8f7;
 
-    <div id="story" class="story section-padding" data-scroll-index="2" style="background-color: #faf8f7;">
+    "background-image: url(images3/cambio_portado.jpg);
+    -->
+
+    <div id="story" class="story section-padding solidBackground" data-scroll-index="2">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
@@ -138,28 +143,31 @@
                     <div class="">
                         <div class="story left">
                             <figure><img src="images3/foto_feliz_pareja.jpg" alt=""></figure>
-                            <div class="caption">
+                            <div class="caption" style="background-image: url(images3/sinnada.jpg);">
 
-                                <p>Nuestra historia inició mientras cursábamos la licenciatura, en donde dos personas
-                                    con gustos diferentes y viviendo en lugares opuestos estaban destinados a ser. Luego
-                                    de que nuestros caminos se separaran porque Fabi se fue a estudiar al otro lado del
-                                    mundo, la pandemia se convirtió en nuestra aliada, acercándonos una vez más y dando
-                                    lugar al inicio de un bonito noviazgo el 18 de julio del 2020.
-                                    <br> <br>
-                                    Mes a mes celebramos el estar juntos y en febrero del 2022 decidimos irnos a vivir
-                                    juntos, tiempo en el
-                                    que pudimos aprender más el uno del otro y confirmar nuestro deseo de formar una
-                                    familia. Fue así como un día de tantos, apareció en los planes el matrimonio. Lo
-                                    hicimos un poco diferente a lo habitual, planeando la fecha y los preparativos,
-                                    antes de la propuesta formal de matrimonio, pero Hugo es así de particular, él
-                                    necesita planear todo antes de que pase.
+                                <p>Nuestra historia comenzó en las aulas del TEC, donde dos personas con gustos
+                                    distintos y vidas en lugares opuestos parecían estar destinadas a encontrarse. El
+                                    destino nos llevó por caminos separados cuando Fabi partió a estudiar a España, pero
+                                    la vida tenía otros planes para nosotros. En medio de un mundo en pausa, la pandemia
+                                    nos acercó nuevamente y, el 18 de julio de 2020, comenzamos nuestra historia de
+                                    amor. Desde entonces, hemos celebrado cada instante juntos, construyendo un vínculo
+                                    que solo se ha fortalecido con el tiempo.
                                     <br><br>
-                                    Sin embargo, en enero del 2024 si hubo una
-                                    propuesta formal sorpresa en un lugar lejano, el Horse Shoe Bent, luego de que un
-                                    grupo inmenso de turistas asiáticos se retirara de un sector en el parque (porque a
-                                    Hugo le daba vergüenza), fuimos hasta ahí y de repente ocurrió la tan esperada
-                                    pregunta “te quieres casar conmigo?”, siendo un sí la respuesta, trayéndonos a este
-                                    día y este momento, que tenemos la fe en Dios, sea para siempre
+                                    En febrero de 2022, dimos un nuevo paso y decidimos compartir un hogar. Fue un
+                                    tiempo de aprendizaje, de risas y de confirmar, día a día, nuestro deseo de formar
+                                    una familia, con la bendición de Dios y el compromiso del matrimonio. A nuestra
+                                    manera, con la esencia de quienes somos, organizamos la fecha y los preparativos
+                                    incluso antes de la propuesta formal. Hugo, con su necesidad de planearlo todo con
+                                    anticipación, y Fabi, con su amor por los detalles, hicieron que cada pieza encajara
+                                    perfectamente.
+                                    <br><br>
+                                    Y así, en enero de 2024, en un rincón mágico del Horseshoe Bend, Arizona, llegó el
+                                    gran momento. Con el corazón latiendo fuerte, Hugo esperó pacientemente a que un
+                                    grupo de turistas despejara el lugar (porque la timidez le ganaba un poco). Y
+                                    entonces, con el paisaje como testigo y el amor guiando sus palabras, hizo la gran
+                                    pregunta: "¿Te quieres casar conmigo?". La respuesta no podía ser otra que un sí
+                                    lleno de emoción, un sí que nos trajo hasta este día, este instante en el que, con
+                                    fe en Dios, confiamos en que nuestro amor será eterno.
                                 </p>
 
                             </div>
@@ -221,7 +229,7 @@
     </div>
 
 
-    <div id="gallery" class="section-padding bg-cream" data-scroll-index="5">
+    <div id="gallery" class="section-padding bg-cream solidBackground" data-scroll-index="5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -232,7 +240,7 @@
                     </a>
                 </div>
             </div>
-            <img src="images3/foto_sesion_de_compromiso.jpg" alt="">
+            <img src="images3/cambiosesion.jpg" alt="">
         </div>
     </div>
 
@@ -246,7 +254,7 @@
             <div class="row">
                 <div class="section-head col-md-12">
                     <h2>¡Esperamos verte!</h2>
-                    <h1>15.02.2025</h1>
+                    <h1>05.04.2025</h1>
                     <h1><i class="ti-heart"></i></h1>
                 </div>
             </div>
@@ -255,7 +263,8 @@
 
 
     <!-- When & Where section -->
-    <div id="whenwhere" class="when-where section-padding" data-scroll-index="6">
+    <div id="whenwhere" class="when-where section-padding solidBackground" data-scroll-index="6">
+
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
@@ -349,8 +358,6 @@
         </iframe>
     </div>
 
-
-
     <!-- Dress Code section -->
     <div id="outfit" class="bride-groom clear section-padding bg-cream" data-scroll-index="3">
         <div class="container">
@@ -361,7 +368,7 @@
                 </div>
                 <div class="col-md-12 text-center mb-30 animate-box">
 
-                    <img src="images3/CODIGO_DE_VESTIMENTA.png" alt="">
+                    <img src="images3/cambioVestimenta.png" alt="">
 
                 </div>
 
@@ -372,7 +379,7 @@
 
     <br>
 
-    <div id="music" class="section-padding bg-white" data-scroll-index="9">
+    <div id="music" class="section-padding bg-white solidBackground" data-scroll-index="9">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
