--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </svg>
     </div>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" >
         <div class="container">
             <!-- Logo -->
             <div class="logo-wrapper navbar-brand valign">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images3/logo2.png" alt="" style="width: 43%;">
+                        <h2>Fabiola &amp; Hugo</h2>
                     </a>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="flexslider js-fullheight">
                 <ul class="slides">
                     <li class="bg-fixed"
-                        style="background-image: url(images3/cambio_portado.jpg); background-position: 50%;"
+                        style="background-image: url(images3/foto_portada.jpg); background-position: 50%;"
                         data-overlay-dark="2" id="icon">
                         <div class="overlay"></div>
                         <div class="container">
@@ -97,7 +97,7 @@
 
     </header>
     <!-- Welcome section -->
-    <div id="welcome" class="welcome section-padding">
+    <div id="welcome" class="welcome section-padding fondillo">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -129,7 +129,7 @@
     "background-image: url(images3/cambio_portado.jpg);
     -->
 
-    <div id="story" class="story section-padding solidBackground" data-scroll-index="2">
+    <div id="story" class="story section-padding fondillo eucalipto" data-scroll-index="2">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
@@ -139,11 +139,11 @@
             </div>
             <br><br>
             <div class="row">
-                <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
+                <div class="col-md-12 animate-box" data-animate-effect="fadeInUp" >
                     <div class="">
                         <div class="story left">
                             <figure><img src="images3/foto_feliz_pareja.jpg" alt=""></figure>
-                            <div class="caption" style="background-image: url(images3/sinnada.jpg);">
+                            <div class="caption" style="background-image: url(assets/fondo.png);">
 
                                 <p>Nuestra historia comenzó en las aulas del TEC, donde dos personas con gustos
                                     distintos y vidas en lugares opuestos parecían estar destinadas a encontrarse. El
@@ -199,7 +199,6 @@
             </div>
         </div>
     </div>
-    <br>
     <!-- Video section -->
     <div id="video" class="story-video section-padding bg-img bg-fixed" data-overlay-dark="2"
         data-background="images3/Foto_mira_nuestra_historia_de_amor.jpg" style="background-position: 50%;">
@@ -229,7 +228,7 @@
     </div>
 
 
-    <div id="gallery" class="section-padding bg-cream solidBackground" data-scroll-index="5">
+    <div id="gallery" class="section-padding eucalipto" data-scroll-index="5">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -263,11 +262,12 @@
 
 
     <!-- When & Where section -->
-    <div id="whenwhere" class="when-where section-padding solidBackground" data-scroll-index="6">
+    <div id="whenwhere" class="when-where section-padding eucalipto2" data-scroll-index="6">
 
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
+                    <br><br><br>
                     <h6 class="section-subtitle">Agenda la fecha</h6>
 
                     <h2 class="section-title">¿Cuando y Donde?</h2>
@@ -337,7 +337,12 @@
                                         </p>
                                     </div>
                                 </li>
-
+                                <li>
+                                    <div class="icon"> <span class="ti-time"></span> </div>
+                                    <div class="text">
+                                        <p>5:00pm</p>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -359,7 +364,7 @@
     </div>
 
     <!-- Dress Code section -->
-    <div id="outfit" class="bride-groom clear section-padding bg-cream" data-scroll-index="3">
+    <div id="outfit" class="bride-groom clear section-padding fondillo" data-scroll-index="3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center mb-30 animate-box" data-animate-effect="fadeInUp">
@@ -377,9 +382,7 @@
     </div>
 
 
-    <br>
-
-    <div id="music" class="section-padding bg-white solidBackground" data-scroll-index="9">
+    <div id="music" class="section-padding bg-white eucalipto3" data-scroll-index="9">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -424,7 +427,7 @@
 
 
     <!-- Gift Registry section -->
-    <div id="gift" class="gift-registry" data-scroll-index="8">
+    <div id="gift" class="gift-registry fondillo" data-scroll-index="8">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -462,7 +465,7 @@
         </div>
     </div>
 
-    <div id="gift" class="gift-registry" data-scroll-index="8" style="background-color: #ffffff;">
+    <div id="gift" class="gift-registry fondillo eucalipto3" data-scroll-index="8" style="background-color: #ffffff;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
