--- a/3.html
+++ b/3.html
@@ -43,7 +43,7 @@
             <div class="logo-wrapper navbar-brand valign">
                 <div class="logo">
                     <a href="index.html">
-                        <h2>Fabiola &amp; Hugo</h2>
+                        <h2>Fabi &amp; Hugo</h2>
                     </a>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                 <div class="col-md-12 text-center">
                     <h6 class="section-subtitle">Galería</h6>
                     <h2 class="section-title">Sesión de compromiso</h2>
-                    <a href="https://japphotocr.pixieset.com/sesindefabiandhugo/" target="_blank">
+                    <a href="https://japphotocr.pixieset.com/sesindeFabiolaandhugo/" target="_blank">
                         <h3>Haz click aquí para ver nuestra sesión de compromiso!</h3>
                     </a>
                 </div>
