--- a/4.html
+++ b/4.html
@@ -270,7 +270,7 @@
                     <br><br><br>
                     <h6 class="section-subtitle">Agenda la fecha</h6>
 
-                    <h2 class="section-title">¿Cuando y Donde?</h2>
+                    <h2 class="section-title">¿Cuándo y Donde?</h2>
                 </div>
                 <br>
             </div>
@@ -387,7 +387,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h6 class="section-subtitle">Música</h6>
-                    <h2 class="section-title">¿Que canción no puede faltar?</h2>
+                    <h2 class="section-title">¿Qué canción no puede faltar?</h2>
                     <button id="openOverlay" class="btn">Selecciona la música!</button>
 
                     <!-- Overlay element -->
