--- a/5.html
+++ b/5.html
@@ -270,7 +270,7 @@
                     <br><br><br>
                     <h6 class="section-subtitle">Agenda la fecha</h6>
 
-                    <h2 class="section-title">¿Cuándo y Donde?</h2>
+                    <h2 class="section-title">¿Cuándo y Dónde?</h2>
                 </div>
                 <br>
             </div>
