--- a/2.html
+++ b/2.html
@@ -234,7 +234,7 @@
                 <div class="col-md-12 text-center">
                     <h6 class="section-subtitle">Galería</h6>
                     <h2 class="section-title">Sesión de compromiso</h2>
-                    <a href="https://japphotocr.pixieset.com/sesindeFabiolaandhugo/" target="_blank">
+                    <a href="https://japphotocr.pixieset.com/sesindefabiandhugo/" target="_blank">
                         <h3>Haz click aquí para ver nuestra sesión de compromiso!</h3>
                     </a>
                 </div>
